src/test/AmbiguousCall2/AmbiguousCall2.expected
error: AmbiguousCall2.panda:10:9: call to 'ambiguous' with parameters (panda.core.Int8, panda.core.Int8) is ambiguous. The following methods are equally good matches:
    method ambiguous(i:panda.core.Int32, r:panda.core.Real64)
    method ambiguous(r:panda.core.Real64, i:panda.core.Int32)
1 error
