src/test/AmbiguousCall2/AmbiguousCall2.panda
class AmbiguousCall2 {
    method ambiguous(i:Int, r:Real) {
    }

    @class
    method ambiguous(r:Real, i:Int) {
    }

    method test() {
        ambiguous(0, 0)
    }
}

